Rework steps (now it's "steps left" in-game mechanic), CustomBG optimizations, HQ images, Fix iphone 6s view

--- a/plink/LaunchScreen.storyboard
+++ b/plink/LaunchScreen.storyboard
@@ -18,7 +18,15 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="JiL-Xv-dw0">
                                 <rect key="frame" x="-706" y="0.0" width="1382" height="852"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ball" translatesAutoresizingMaskIntoConstraints="NO" id="gVz-zg-La5">
+                                <rect key="frame" x="0.0" y="84" width="393" height="197"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="titleCheap" translatesAutoresizingMaskIntoConstraints="NO" id="qns-OR-W8E">
+                                <rect key="frame" x="0.0" y="163" width="393" height="225"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
@@ -31,6 +39,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ball" width="513" height="446"/>
         <image name="bg" width="4096" height="1366"/>
+        <image name="titleCheap" width="512" height="336"/>
     </resources>
 </document>
